src/objects/Refund_Adjustment__c.object
<CustomObject>
    <description>Captures Refund and Adjustment requests made by Customer Service and RSLPO.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>CaseNumber__r.Account.Wex_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Refunds/Adjustments</relationshipLabel>
        <relationshipName>Refunds_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acct_Platform__c</fullName>
        <formula>IF(OR(UPPER(CaseNumber__r.Account.Platform__c) = &quot;CLASSIC&quot;,UPPER(CaseNumber__r.Account.Platform__c) = &quot;TANDEM&quot;), &quot;Classic&quot;, &quot;Millennium&quot;)</formula>
        <label>Acct Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Waived__c</fullName>
        <inlineHelpText>Amount to be adjusted (waived) or refunded</inlineHelpText>
        <label>Ref / Adj Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>negative of Ref/Adj amount for inclusion in reports</description>
        <formula>Amount_Waived__c * (-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required for denial</inlineHelpText>
        <label>Approval Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Refunds_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attn__c</fullName>
        <formula>CaseNumber__r.Contact.FirstName  &amp; &apos; &apos; &amp; CaseNumber__r.Contact.LastName</formula>
        <label>Attn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_ABA__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Customer bank routing number</inlineHelpText>
        <label>Bank ABA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Case must be Service Operations or VAS - Retention Record Type.</errorMessage>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Operations, VAS - Retention, VAS - Retention, Service Operations</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Refunds/Adjustments</relationshipLabel>
        <relationshipName>Refunds_Adjustments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS</fullName>
                    <label>Customer Service</label>
                </value>
                <value>
                    <fullName>SRS</fullName>
                    <label>Strategic Receivables</label>
                </value>
                <value>
                    <fullName>RSLPO</fullName>
                </value>
                <value>
                    <fullName>SAVEDESK</fullName>
                    <isActive>false</isActive>
                    <label>Retention</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EntryType__c</fullName>
        <description>ONCR for subtractions, ONDR for additions</description>
        <formula>IF( Amount__c &lt;=0, &quot;ONCR&quot;,&quot;ONDR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EntryType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Code__c</fullName>
        <label>Fee Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fee_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ANC</fullName>
                </value>
                <value>
                    <fullName>ACTSET</fullName>
                </value>
                <value>
                    <fullName>CRDFEE</fullName>
                </value>
                <value>
                    <fullName>FUTCRED</fullName>
                </value>
                <value>
                    <fullName>GOOD</fullName>
                </value>
                <value>
                    <fullName>IMFRD</fullName>
                </value>
                <value>
                    <fullName>IMGDW</fullName>
                </value>
                <value>
                    <fullName>IMIN</fullName>
                </value>
                <value>
                    <fullName>IMMSP</fullName>
                </value>
                <value>
                    <fullName>IMOPR</fullName>
                </value>
                <value>
                    <fullName>IMTRM</fullName>
                </value>
                <value>
                    <fullName>IMW</fullName>
                </value>
                <value>
                    <fullName>INGDW</fullName>
                </value>
                <value>
                    <fullName>INMSP</fullName>
                </value>
                <value>
                    <fullName>INOPR</fullName>
                </value>
                <value>
                    <fullName>INTRM</fullName>
                </value>
                <value>
                    <fullName>INTRT</fullName>
                </value>
                <value>
                    <fullName>INW</fullName>
                </value>
                <value>
                    <fullName>ITFRD</fullName>
                </value>
                <value>
                    <fullName>LFGDW</fullName>
                </value>
                <value>
                    <fullName>LFMSP</fullName>
                </value>
                <value>
                    <fullName>LFOPR</fullName>
                </value>
                <value>
                    <fullName>LFTRM</fullName>
                </value>
                <value>
                    <fullName>LFW</fullName>
                </value>
                <value>
                    <fullName>ONLFEE</fullName>
                </value>
                <value>
                    <fullName>OPER</fullName>
                </value>
                <value>
                    <fullName>OVRNGT</fullName>
                </value>
                <value>
                    <fullName>PMCFEE</fullName>
                </value>
                <value>
                    <fullName>PSFEE</fullName>
                </value>
                <value>
                    <fullName>RAFEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ANC</fullName>
                </value>
                <value>
                    <fullName>LATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fleet_Bank_Account__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Customer bank account number</inlineHelpText>
        <label>Fleet Bank Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funder</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <formula>CASE( LEFT( Funder__c , 3) , &quot;IOL&quot;, &quot;gl # 114130&quot;, &quot;ISB&quot;, &quot;gl # 114130&quot;, &quot;GTE&quot;, &quot;gl # 219200&quot;,&quot;TES&quot;, &quot;gl # 219200&quot;,&quot;URF&quot;, &quot;gl # 219200&quot;,&quot;gl # 114200&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iten_id__c</fullName>
        <defaultValue>&quot;REFUND&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Iten ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negotiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Code__c</fullName>
        <label>Refund Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REFND</fullName>
                    <default>true</default>
                    <label>Check Refund</label>
                </value>
                <value>
                    <fullName>ESCH</fullName>
                    <label>Escheatment</label>
                </value>
                <value>
                    <fullName>MISAP</fullName>
                    <label>Misapplied Payment</label>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>OVRPY</fullName>
                    <label>Overpay</label>
                </value>
                <value>
                    <fullName>TERM</fullName>
                    <label>Account Terminated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <description>Account termination date (if applicable)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Late_Fee__c</fullName>
        <inlineHelpText>The Actual Amount of the FEE they owe</inlineHelpText>
        <label>Total Late Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&quot;ONDR&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unified_Fee_Code__c</fullName>
        <description>Condenses the Refund Code and Adjustment Fee Code into a single column for reporting</description>
        <formula>IF( RecordType.Name = &apos;Adjustment&apos;,  TEXT(Fee_Code__c) ,  TEXT(Refund_Code__c) )</formula>
        <label>Unified Fee Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Refund/Adjustment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CaseNumber__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Fee_Code__c</columns>
        <columns>Refund_Code__c</columns>
        <columns>Amount_Waived__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Approval_Comment__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Funder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Approved,Held,Denied</value>
        </filters>
        <filters>
            <field>Account_Number__c</field>
            <operation>equals</operation>
            <value>9100004482297</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CS_Adjustments_Needing_Approval</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Number__c</columns>
        <columns>Name__c</columns>
        <columns>Unified_Fee_Code__c</columns>
        <columns>Reason_Description__c</columns>
        <columns>Amount_Waived__c</columns>
        <columns>Reason_Comment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Held</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Refund_Adjustment__c.Adjustment</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>CS</value>
        </filters>
        <label>CS Adjustments Needing Approval</label>
    </listViews>
    <listViews>
        <fullName>CS_Refunds_Needing_Approval</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Number__c</columns>
        <columns>Name__c</columns>
        <columns>Unified_Fee_Code__c</columns>
        <columns>Reason_Description__c</columns>
        <columns>Amount_Waived__c</columns>
        <columns>Reason_Comment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Held</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Refund_Adjustment__c.Refund</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>CS</value>
        </filters>
        <label>CS Refunds Needing Approval</label>
    </listViews>
    <listViews>
        <fullName>Need_Approval</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Number__c</columns>
        <columns>Name__c</columns>
        <columns>Unified_Fee_Code__c</columns>
        <columns>Reason_Description__c</columns>
        <columns>Amount_Waived__c</columns>
        <columns>Reason_Comment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Held</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Refund_Adjustment__c.Adjustment</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
        </filters>
        <label>Adjustments Needing Approval</label>
    </listViews>
    <listViews>
        <fullName>Receivables_Adjustments_Needing_Approval</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Number__c</columns>
        <columns>Name__c</columns>
        <columns>Unified_Fee_Code__c</columns>
        <columns>Reason_Description__c</columns>
        <columns>Amount_Waived__c</columns>
        <columns>Reason_Comment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Held</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Refund_Adjustment__c.Adjustment</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>SRS,RSLPO</value>
        </filters>
        <label>Receivables Adjustments Needing Approval</label>
        <sharedTo>
            <role>Receivables</role>
            <role>Receivables_Manager</role>
            <role>SystemAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Receivables_Refunds_Needing_Approval</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Number__c</columns>
        <columns>Name__c</columns>
        <columns>Unified_Fee_Code__c</columns>
        <columns>Reason_Description__c</columns>
        <columns>Amount_Waived__c</columns>
        <columns>Reason_Comment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Held</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Refund_Adjustment__c.Refund</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>SRS,RSLPO</value>
        </filters>
        <label>Receivables Refunds Needing Approval</label>
        <sharedTo>
            <role>Receivables</role>
            <role>Receivables_Manager</role>
            <role>SystemAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Refund_Adjustments_Without_Department</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Department__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>Decision_Date__c</columns>
        <columns>Create_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Amount__c</field>
            <operation>lessThan</operation>
            <value>-500</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Approver_Name__c</field>
            <operation>notEqual</operation>
            <value>Andrew Dean</value>
        </filters>
        <filters>
            <field>Approver_Name__c</field>
            <operation>notEqual</operation>
            <value>Clayton Bergloff</value>
        </filters>
        <filters>
            <field>Approver_Name__c</field>
            <operation>notEqual</operation>
            <value>Kathleen Doten</value>
        </filters>
        <filters>
            <field>Approver_Name__c</field>
            <operation>notEqual</operation>
            <value>Christopher Lloyd</value>
        </filters>
        <filters>
            <field>Approver_Name__c</field>
            <operation>notEqual</operation>
            <value>Natasha Sant</value>
        </filters>
        <filters>
            <field>Approver_Name__c</field>
            <operation>notEqual</operation>
            <value>David Whitton</value>
        </filters>
        <filters>
            <field>Approver_Name__c</field>
            <operation>notEqual</operation>
            <value>Melinda Singleton</value>
        </filters>
        <filters>
            <field>Approver_Name__c</field>
            <operation>notEqual</operation>
            <value>Ninna Wilson</value>
        </filters>
        <label>Refund-Adjustments Without Department</label>
        <sharedTo>
            <group>Serv_Ops_Management_Reports</group>
            <group>Serv_Ops_Receivables</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Refunds_Needing_Approval</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Number__c</columns>
        <columns>Name__c</columns>
        <columns>Unified_Fee_Code__c</columns>
        <columns>Reason_Description__c</columns>
        <columns>Amount_Waived__c</columns>
        <columns>Reason_Comment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Department__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Held</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Refund_Adjustment__c.Refund</value>
        </filters>
        <label>Refunds Needing Approval</label>
    </listViews>
    <nameField>
        <displayFormat>RFADJ-{00000000}</displayFormat>
        <label>Refund/Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds/Adjustments</pluralLabel>
    <recordTypes>
        <fullName>Adjustment</fullName>
        <active>true</active>
        <label>Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refund</fullName>
        <active>true</active>
        <label>Refund</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_an_Approved_or_Denied_Item</fullName>
        <active>true</active>
        <description>Once a refund or adjustment has been approved or denied, it cannot be changed.</description>
        <errorConditionFormula>OR( ISPICKVAL(PRIORVALUE( Approval_Status__c),&quot;Approved&quot; ),
ISPICKVAL(PRIORVALUE( Approval_Status__c),&quot;Denied&quot; ))</errorConditionFormula>
        <errorMessage>Refund/Adjustment entries cannot be changed once they have been Approved or Denied.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Service_Approval_Limits</fullName>
        <active>true</active>
        <description>Asserts approval matrix for Customer Service records</description>
        <errorConditionFormula>AND(TEXT(Department__c ) = &apos;CS&apos;,
TEXT(Approval_Status__c) = &apos;Approved&apos;,
OR (
NOT ( OR ($Permission.CS_Sr_Associate, $Permission.CS_Team_Lead, $Permission.CS_Sr_Team_Lead, $Permission.CS_Manager )),
AND (Amount_Waived__c &gt; 1000, NOT ( OR ($Permission.CS_Team_Lead, $Permission.CS_Sr_Team_Lead, $Permission.CS_Manager ))),
AND (Amount_Waived__c &gt; 25000, NOT ( $Permission.CS_Manager )),
Amount_Waived__c &gt; 100000
)
)</errorConditionFormula>
        <errorMessage>You do not have permission to approve this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Denied_approval_requires_comment</fullName>
        <active>true</active>
        <description>Forces Approval Comment to be not blank if requested approval is Denied.</description>
        <errorConditionFormula>AND( ISPICKVAL(Approval_Status__c , &apos;Denied&apos;), OR(ISNULL( Approval_Comment__c ),ISBLANK(Approval_Comment__c)))</errorConditionFormula>
        <errorMessage>Denial of requests requires that a comment be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Department_and_Comment_Cant_be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(TEXT(Department__c)),
 LEN(TRIM( Reason_Comment__c)) = 0)</errorConditionFormula>
        <errorMessage>Department and Comment cannot be empty,</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RSLPO_SRS_Approval_Limits</fullName>
        <active>true</active>
        <description>Enforces approval limits for Receivables Refunds and Adjustments</description>
        <errorConditionFormula>AND( OR (TEXT(Department__c ) = &apos;SRS&apos;,TEXT(Department__c ) = &apos;RSLPO&apos;),
TEXT(Approval_Status__c) = &apos;Approved&apos;,
OR (
NOT ( OR ($Permission.RSLPO_Sr_Associate, $Permission.RSLPO_Team_Lead, $Permission.RSLPO_Sr_Team_Lead, $Permission.RSLPO_Manager )),
AND (Amount_Waived__c &gt; 1000, NOT ( OR ($Permission.RSLPO_Team_Lead, $Permission.RSLPO_Sr_Team_Lead, $Permission.RSLPO_Manager ))),
AND (Amount_Waived__c &gt; 25000, NOT ( $Permission.RSLPO_Manager )),
Amount_Waived__c &gt; 100000
)
)</errorConditionFormula>
        <errorMessage>You do not have permission to approve this request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_fee_GTE_waived_amount</fullName>
        <active>true</active>
        <description>For adjustments, validate that the amount waived is no greater than the fee charged.</description>
        <errorConditionFormula>AND( RecordType.Name   =   &quot;Adjustment&quot;, OR((Amount_Waived__c  &gt;  Total_Late_Fee__c ),(ISBLANK(Total_Late_Fee__c))))</errorConditionFormula>
        <errorMessage>Amount Waived must not exceed the Total Fee Charged</errorMessage>
    </validationRules>
</CustomObject>